tests/snapshots/mutual_recursion__len.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/mutual_recursion/len.hvm
---
@Len = ((@Len$C0 (#1 a)) a)

@Len$C0 = (* (a c))
  & $(#17 $(b c)) ~ #16
  & @Len ~ (a b)

@List.cons = (a (b ((a (b c)) (* c))))

@List.nil = (* (a a))

@main = g
  & @Len ~ (f g)
  & @List.cons ~ (* (e f))
  & @List.cons ~ (* (d e))
  & @List.cons ~ (* (c d))
  & @List.cons ~ (* (b c))
  & @List.cons ~ (* (a b))
  & @List.cons ~ (* (@List.nil a))
